--- a/index.html
+++ b/index.html
@@ -1,1 +1,322 @@
-Hello World
+<!--
+Author: W3layouts
+Author URL: http://w3layouts.com
+License: Creative Commons Attribution 3.0 Unported
+License URL: http://creativecommons.org/licenses/by/3.0/
+-->
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<title>Ashin George</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" >
+		<meta name="keywords" content="Ashin George" >
+		<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+		<!-- Custom Theme files -->
+		<link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all">
+		<link href="css/style.css" type="text/css" rel="stylesheet" media="all">   
+		<link href="css/font-awesome.css" rel="stylesheet">		<!-- font-awesome icons -->   
+		<!-- //Custom Theme files --> 
+		<!-- js -->
+		<script src="js/jquery-2.2.3.min.js"></script>  
+		<!-- //js -->
+		<!-- web-fonts -->   
+		<link href="//fonts.googleapis.com/css?family=Kurale" rel="stylesheet">
+		<link href='//fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+		<!-- //web-fonts -->
+	</head>
+	<body>  
+		<!-- main --> 
+		<div class="buttons-wrapper"> 
+			<!-- banner -->
+		<div class="banner">
+			<div class="banner-w3lsinfo">
+				<div class="container">
+					<div class="col-md-4 header-w3left">
+						<img src="images/Ashin.png" alt=""/>
+						<div class="header-imgtext-w3ls">
+							<h1>Ashin George</h1>
+							<div class="social-wthree-icons">
+								<ul>
+									<li><a href="mailto:ashingeorge@gmail.com" class="fa fa-envelope icon icon-border envelope"> </a></li> 
+									<li><a href="www.linkedin.com/in/ashingeorge" class="fa fa-linkedin icon icon-border linkedin"> </a></li> 
+									<li><a href="https://ashingeorge.github.io" class="fa fa-github icon icon-border github"> </a></li> 
+								</ul>
+								<div class="clearfix"> </div>
+							</div>  
+						</div>
+					</div>
+					<div class="col-md-8 header-w3right"> 
+						<!--top-nav-->
+<!-- 	<div class="top-nav wow">
+		<div class="container">
+			<div class="navbar-header logo">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+					Menu
+				</button>
+			</div> -->
+			<!-- Collect the nav links, forms, and other content for toggling -->
+<!--			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<div class="menu">
+					<ul class="nav navbar">
+						<li><a href="#education" class="scroll">Education</a></li>
+						<li><a href="#work" class="scroll">Experience</a></li>
+						<li><a href="#skills" class="scroll">Skills</a></li>
+						<li><a href="#projects" class="scroll">Projects</a></li>
+					</ul>
+					<div class="clearfix"> </div>
+				</div>
+			</div>
+		</div>
+	</div> -->
+						<h2>Ashin George</h2>					
+						<h3 class="agileits-title">ABOUT ME</h3> 
+						<div class="profile-agileinfo"> 
+							<p align="justify">First year Computer Science graduate student at University of California - San Diego specializing in Machine Learning and Computer Engineering. I have previously worked with ARM, Bangalore as a Senior Engineer for 4 years in top level processor verification using Random Instruction Sequence methodology.</p>
+							<p align="justify">Looking for internship opportunities in software engineering and machine learning for summer 2018</p>
+								<div class="col-md-4 col-xs-4 profile-grids"><a href="mailto:ashingeorge@gmail.com"> 
+									<i class="fa fa-envelope"></i>
+									<h5>Contact Me</h5>
+									<ul class="address"> 
+										<li> <a href="mailto:ashingeorge@gmail.com">ashingeorge@gmail.com</a></li>
+									</ul></a>
+								</div>
+								<div class="col-md-4 col-xs-4 profile-grids"> 
+									<i class="fa fa-map-marker"></i>
+									<h5>San Diego,CA</h5>
+								</div>
+								<div class="clearfix"> </div>
+							</div>
+						</div>	
+						<div class="clearfix"> </div>
+
+					</div>
+				</div>
+			</div>
+			<!-- //banner --> 
+			<!--education-->
+			<div class="work agileits-w3layouts">
+				<div class="container">  
+					<div class="col-md-6 work-agile-left">
+						<h3 class="agileits-title" id="education">Education</h3> 
+						<div class="panel-group w3l_panel_group_faq" role="tablist" id="accordion1">
+							<div class="panel panel-default">
+								<div class="panel-heading" role="tab" id="headingone">
+									<h4 class="panel-title asd">
+										<a class="pa_italic" role="button" data-toggle="collapse" data-parent="#accordion1" href="#collapseone" aria-expanded="true" aria-controls="collapseone">
+											<span class="glyphicon glyphicon-plus" aria-hidden="true"></span><i class="glyphicon glyphicon-minus" aria-hidden="true"></i> University of California San Diego (Sep 2017- present)
+										</a>
+									</h4>
+								</div>
+								<div id="collapseone" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingone">
+									<div class="panel-body panel_text">
+										<h5>MS in Computer Science</h5>
+										Specializing in Machine Learning and Computer Engineering
+									</div>
+								</div>
+							</div>
+							<div class="panel panel-default">
+								<div class="panel-heading" role="tab" id="headingtwo">
+									<h4 class="panel-title asd">
+										<a class="pa_italic collapsed" role="button" data-toggle="collapse" data-parent="#accordion3" href="#collapsetwo" aria-expanded="false" aria-controls="collapsetwo">
+											<span class="glyphicon glyphicon-plus" aria-hidden="true"></span><i class="glyphicon glyphicon-minus" aria-hidden="true"></i>Birla Institute of Technology and Science - Pilani (2009-2013)
+										</a>
+									</h4>
+								</div>
+								<div id="collapsetwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingtwo">
+									<div class="panel-body panel_text">
+										<h5>B.E.(Hons.) in Electrical and Electronics</h5>
+									</div>
+								</div>
+							</div> 
+						</div>
+						<h3 class="agileits-title agileits-title2" id="work">Work Experience</h3> 
+						<div class="panel-group w3l_panel_group_faq" id="accordion" role="tablist" aria-multiselectable="true">
+							<div class="panel panel-default">
+								<div class="panel-heading" role="tab" id="headingthree">
+									<h4 class="panel-title asd">
+										<a class="pa_italic" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapsethree" aria-expanded="true" aria-controls="collapsethree">
+											<span class="glyphicon glyphicon-plus" aria-hidden="true"></span><i class="glyphicon glyphicon-minus" aria-hidden="true"></i> ARM (2013-2017)
+										</a>
+									</h4>
+								</div>
+								<div id="collapsethree" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingthree">
+									<div class="panel-body panel_text">
+										<div class="panel-group w3l_panel_group_faq" id="accordion2" role="tablist" aria-multiselectable="true">
+											<div class="panel panel-default">
+												<div class="panel-heading" role="tab" id="headingfour">
+													<h4 class="panel-title asd">
+														<a class="pa_italic  collapsed" role="button" data-toggle="collapse" data-parent="#accordion4" href="#collapsefour" aria-expanded="false" aria-controls="collapsefour">
+															<span class="glyphicon glyphicon-plus" aria-hidden="true"></span><i class="glyphicon glyphicon-minus" aria-hidden="true"></i>Senior Engineer (Apr 2017 - Aug 2017)
+														</a>
+													</h4>
+												</div>
+												<div id="collapsefour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingfour">
+													<div class="panel-body panel_text">
+														<h5>RIS Verification of ARM v8/v8.1/v8.2 Cortex designs</h5>
+														<ul> 
+															<li align="justify"> Worked with teams from Austin, France and Bangalore for the top-level functional verification of microprocessors using Random Instruction Sequence(RIS) generator </li>
+															<li align="justify"> Point of contact between the RIS development team (Austin) and CPU design verification teams (Bangalore) for the functional verification of ARM Application processors </li>
+															<li align="justify"> Developed the internal cpu model for test simulation</li> 
+														</ul>
+													</div>
+												</div>
+											</div>
+											<div class="panel panel-default">
+												<div class="panel-heading" role="tab" id="headingfive">
+													<h4 class="panel-title asd">
+														<a class="pa_italic  collapsed" role="button" data-toggle="collapse" data-parent="#accordion5" href="#collapsefive" aria-expanded="false" aria-controls="collapsefive">
+															<span class="glyphicon glyphicon-plus" aria-hidden="true"></span><i class="glyphicon glyphicon-minus" aria-hidden="true"></i>Verification Engineer (Jan 2015 - Mar 2017)
+														</a>
+													</h4>
+												</div>
+												<div id="collapsefive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingfive">
+													<div class="panel-body panel_text"> 
+														<h5>RIS Verification of ARM v8/v8.1/v8.2 Cortex designs</h5>
+														<p align="justify">Stimulus development targeting micro-architectural or implementation specific features of ARM internal designs </p>
+
+														<h5>ARM v8-A RIS Template Library</h5>
+														<p align="justify">Created templates to generate constrained-random stimulus for verifying ARM v8 architectural scenarios for internal and external ARM CPUs.</p>
+
+														<h5>MPRIS Tool Development</h5>
+														<ul> 
+															<li  align="justify"> Profiled the Multicore RIS tool used by ARM &amp; licensees </li>
+															<li  align="justify"> Analyzed, coded and tested architectural enhancements, ISA extensions, MP scenarios &amp; sync-up mechanisms </li>
+															<li  align="justify"> Developed the internal cpu model for test simulation</li> 
+														</ul>
+													</div>
+												</div>
+											</div>
+											<div class="panel panel-default">
+												<div class="panel-heading" role="tab" id="headingsix">
+													<h4 class="panel-title asd">
+														<a class="pa_italic  collapsed" role="button" data-toggle="collapse" data-parent="#accordion6" href="#collapsesix" aria-expanded="false" aria-controls="collapsesix">
+															<span class="glyphicon glyphicon-plus" aria-hidden="true"></span><i class="glyphicon glyphicon-minus" aria-hidden="true"></i>Graduate Engineer (Jul 2013 - Dec 2014)
+														</a>
+													</h4>
+												</div>
+												<div id="collapsesix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingsix">
+													<div class="panel-body panel_text">
+														<h5>ARM Cortex-A12/Cortex-A17 Top-level RIS Verification</h5>
+														<ul> 
+															<li  align="justify"> Deployed RAVEN, the RIS (Random Instruction Sequence) verification tool, and created stimulus for the functional verification of architectural and micro-architectural scenarios </li>
+															<li  align="justify"> Uncovered critical RTL bugs resulting in RAVEN becoming the primary RIS tool</li>
+															<li  align="justify"> Analyzed and reproduced bugs found at unit-level and system-level</li> 
+														</ul>
+													</div>
+												</div>
+											</div>
+											<div class="panel panel-default">
+												<div class="panel-heading" role="tab" id="headingseven">
+													<h4 class="panel-title asd">
+														<a class="pa_italic  collapsed" role="button" data-toggle="collapse" data-parent="#accordion7" href="#collapseseven" aria-expanded="false" aria-controls="collapseseven">
+															<span class="glyphicon glyphicon-plus" aria-hidden="true"></span><i class="glyphicon glyphicon-minus" aria-hidden="true"></i>Intern (Jan 2013 - Jun 2013)
+														</a>
+													</h4>
+												</div>
+												<div id="collapseseven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingseven">
+													<div class="panel-body panel_text">
+														<h5>Automation of Microprocessor Validation Flow</h5>
+														<ul> 
+															<li  align="justify"> Automated the validation flow used by top-level CPU verification teams at ARM </li>
+															<li  align="justify"> Created Perl scripts for generating regression statistics, coverage reports and failure analysis.</li>
+														</ul>
+													</div>
+												</div>
+											</div>
+										</div> 
+										<ul> 
+											<li  align="justify"> Presented paper on <i>Challenges of Verifying Advanced Self-modifying Code Scenarios and RIS Solutions</i> at the ARM Global Engineering Conference at Birmingham, U.K. (May 2016), and at Austin,TX </li>
+											<li  align="justify"> Delivered a series of knowledge sharing sessions for the technical training of new grads and lateral hires</li>
+											<li  align="justify">Bravo awardee for outstanding contribution at ARM</li>
+											<li  align="justify">Mentored a new graduate, helping her to achieve employee recognition award within six months, and mentored two interns, enabling both to get placed at ARM</li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</div> 
+					</div>
+					<div class="col-md-4 services">
+						<h3 class="agileits-title" id="skills">Skills</h3>  
+						<div class="serv-wthree-row w3layouts">
+							<div class="col-xs-3 services-w3lsleft">
+								<span class="glyphicon glyphicon-console" aria-hidden="true"></span>
+							</div>
+							<div class="col-xs-9 services-w3lsright">
+								<h4>Languages</h4>
+								<p>C/C++, Python, Perl, shell scripting, ARM assembly</p>
+							</div>
+							<div class="clearfix"> </div>
+						</div>
+						<div class="serv-wthree-row w3layouts serv-wthree-rowmdl">
+							<div class="col-xs-3 services-w3lsleft">
+								<span class="glyphicon glyphicon-gift" aria-hidden="true"></span>
+							</div>
+							<div class="col-xs-9 services-w3lsright">
+								<h4>Packages</h4>
+								<p>TensorFlow, Keras, Scikit Learn, Pandas</p>
+							</div>
+							<div class="clearfix"> </div>
+						</div>
+						<div class="serv-wthree-row w3layouts">
+							<div class="col-xs-3 services-w3lsleft">
+								<span class="glyphicon glyphicon-file" aria-hidden="true"></span>
+							</div>
+							<div class="col-xs-9 services-w3lsright">
+								<h4>Applications</h4>
+								<p>Vim, git, subversion, Verdi</p>
+							</div>
+							<div class="clearfix"> </div>
+						</div>
+						<div class="serv-wthree-row w3layouts">
+							<div class="col-xs-3 services-w3lsleft">
+								<span class="glyphicon glyphicon-book" aria-hidden="true"></span>
+							</div>
+							<div class="col-xs-9 services-w3lsright">
+								<h4>ARM architecture</h4>
+								<p>Expertise in Application profile architecture and Cortex-A processors</p>
+							</div>
+							<div class="clearfix"> </div>
+						</div>
+					</div>  
+					<div class="clearfix"> </div>
+				</div>
+				<!--//education-->
+				<!-- work --> 
+				<div class="work agileits-w3layouts">
+					<div class="container">  
+						<div class="col-md-8">
+							<h3 class="agileits-title" id="projects">My Projects</h3> 
+							<!-- Projects -->
+							<div class="Projects">
+								<h3 class="title"><a href="#">Personalized Recommender System based on Google Local</a></h3>
+								<p  align="justify" class="summary">Created a Recommender system to suggest stores to users based on Google Local Business data using Collaborative Filtering and Latent Factor models. The models is optimized for sparse data and predicts user-specific business visit and rating based on Google Local data.</p>
+								<h3 class="title"><a href="#">Fake News Classification</a></h3>
+								<p  align="justify" class="summary">Created a News classifier using MLP assisted by real time Google News Search which has a BER of 0.13 and accuracy of 0.86. Created a new text corpus, which we have named <i>Beautiful Liar</i>, of 435,000 news articles labeled as true news, fake news or ambiguous, by scraping through <a href="http://www.politifact.com">Politifact.com</a></p>
+								<h3 class="title"><a href="#">Image Classification using Convolutional Neural Network</a></h3>
+								<p>Created a shallow Convolutional Neural Network to classify images on CIFAR-10</p>
+								<h3 class="title"><a href="#">Perceptron based dynamic branch predictor</a></h3>
+								<p>Designed a perceptron branch predictor optimized for low hardware budget which reduced misprediction rate by 20-22\% over standard dynamic branch predictors</p>
+							</div>
+						</div>
+						<!-- //Projects -->  
+					</div>
+					<div class="col-md-6 work-agile-right"> 
+					</div>
+					<div class="clearfix"> </div>
+				</div> 
+				<!-- footer -->
+				<div class="agile-footer"> 
+					<p>© 2017 Simple CV. All rights reserved | Design by  <a href="http://w3layouts.com/" target="_blank">w3layouts</a> </p>
+				</div>
+				<!-- //footer --> 
+			</div> 
+			<!-- //work --> 			
+		</div>
+		<!-- //main -->  
+<!-- Bootstrap core JavaScript
+	================================================== -->
+	<!-- Placed at the end of the document so the pages load faster -->
+		<script src="js/bootstrap.js"></script>
+	</body>
+</html>
