Added Markov language model
Added Markov language model text prediction project. Added GPAs in education history

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								</div>
 								<div id="collapseone" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingone">
 									<div class="panel-body panel_text">
-										<h5>MS in Computer Science</h5>
+										<h5>MS in Computer Science (GPA:4.0/4)</h5>
 										Specializing in Machine Learning and Computer Engineering
 									</div>
 								</div>
@@ -125,7 +125,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								</div>
 								<div id="collapsetwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingtwo">
 									<div class="panel-body panel_text">
-										<h5>B.E.(Hons.) in Electrical and Electronics</h5>
+										<h5>B.E.(Hons.) in Electrical and Electronics  (GPA:9.12/10)</h5>
 									</div>
 								</div>
 							</div> 
@@ -293,6 +293,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								<p  align="justify" class="summary">Created a Recommender system to suggest stores to users based on Google Local Business data using Collaborative Filtering and Latent Factor models. The models is optimized for sparse data and predicts user-specific business visit and rating based on Google Local data.</p>
 								<h3 class="title"><a href="#">Fake News Classification</a></h3>
 								<p  align="justify" class="summary">Created a News classifier using MLP assisted by real time Google News Search which has a BER of 0.13 and accuracy of 0.86. Created a new text corpus, which we have named <i>Beautiful Liar</i>, of 435,000 news articles labeled as true news, fake news or ambiguous, by scraping through <a href="http://www.politifact.com">Politifact.com</a></p>
+								<h3 class="title"><a href="#">Text Prediction using n-gram Markov Language Model</a></h3>
+								<p>Developed a text prediction/completion system based on a mixture of n-gram Markov language models. The model consists of 9.67 million n-grams(unigrams, bigrams, and trigrams).</p>
 								<h3 class="title"><a href="#">Image Classification using Convolutional Neural Network</a></h3>
 								<p>Created a shallow Convolutional Neural Network to classify images on CIFAR-10</p>
 								<h3 class="title"><a href="#">Perceptron based dynamic branch predictor</a></h3>
