--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<div class="social-wthree-icons">
 								<ul>
 									<li><a href="mailto:ashingeorge@gmail.com" class="fa fa-envelope icon icon-border envelope"> </a></li> 
-									<li><a href="www.linkedin.com/in/ashingeorge" class="fa fa-linkedin icon icon-border linkedin"> </a></li> 
+									<li><a href="https://www.linkedin.com/in/ashingeorge" class="fa fa-linkedin icon icon-border linkedin"> </a></li> 
 									<li><a href="https://ashingeorge.github.io" class="fa fa-github icon icon-border github"> </a></li> 
 								</ul>
 								<div class="clearfix"> </div>
