--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								<h3 class="title"><a href="#">Image Classification using Convolutional Neural Network</a></h3>
 								<p>Created a shallow Convolutional Neural Network to classify images on CIFAR-10</p>
 								<h3 class="title"><a href="#">Perceptron based dynamic branch predictor</a></h3>
-								<p>Designed a perceptron branch predictor optimized for low hardware budget which reduced misprediction rate by 20-22\% over standard dynamic branch predictors</p>
+								<p>Designed a perceptron branch predictor optimized for low hardware budget which reduced misprediction rate by 20-22% over standard dynamic branch predictors</p>
 							</div>
 						</div>
 						<!-- //Projects -->  
